--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="wolves" and data-mode="dark"
 
@@ -346,7 +346,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="lynx" and data-mode="light"
 
@@ -371,7 +371,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="courage" and data-mode="light"
 
@@ -396,7 +396,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="summit" and data-mode="light"
 
@@ -421,7 +421,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="bucknell" and data-mode="light"
 
@@ -446,7 +446,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="sounders" and data-mode="light"
 
@@ -471,7 +471,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="reign" and data-mode="light"
 
@@ -496,7 +496,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="ncfc" and data-mode="light"
 
@@ -521,7 +521,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="jump" and data-mode="light"
 
@@ -546,7 +546,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
       </div>
       <div class="card-closed-body">
         <code class="prompt-code">Build this using Diet AirDS:
-https://diet-air-ds.vercel.app/component-prompt-guide.md
+https://diet-air-ds.vercel.app/agent-guide.md
 
 Use data-theme="athletics" and data-mode="light"
 
@@ -598,7 +598,7 @@ Always make sure you use the CSS files contained in the .md above. Only create c
   sections.forEach(s => observer.observe(s));
 
   function copyPrompt(button, theme, mode) {
-    const promptText = `Build this using Diet AirDS:\nhttps://diet-air-ds.vercel.app/component-prompt-guide.md\n\nUse data-theme="${theme}" and data-mode="${mode}"\n\nAlways make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.\n\n[Describe what you want to build]`;
+    const promptText = `Build this using Diet AirDS:\nhttps://diet-air-ds.vercel.app/agent-guide.md\n\nUse data-theme="${theme}" and data-mode="${mode}"\n\nAlways make sure you use the CSS files contained in the .md above. Only create custom styling if there is nothing applicable in Diet AirDS.\n\n[Describe what you want to build]`;
 
     navigator.clipboard.writeText(promptText).then(() => {
       const originalText = button.textContent;
