feat: add input background token and update documentation

--- a/walkthrough.html
+++ b/walkthrough.html
@@ -751,6 +751,10 @@
         <span class="labelBold20">--bg-nav</span>
         <p class="labelRegular10 text-secondary mt-50">Nav bar + blur</p>
       </div>
+      <div class="border rounded-200 p-250" style="background: var(--bg-input); text-align: center;">
+        <span class="labelBold20">--bg-input</span>
+        <p class="labelRegular10 text-secondary mt-50">Input fields</p>
+      </div>
     </div>
   </div>
 
@@ -762,6 +766,7 @@
         <tr><td><code>--bg-surface</code></td><td>Cards, tiles, elevated areas</td><td>Light gray (#EEF2F6 wolves, #F4F4F4 others)</td><td>Dark surface (#0C233F wolves, #1F1F1F others)</td></tr>
         <tr><td><code>--bg-sheet</code></td><td>Modals, sheets, highest layer</td><td>White (#FFFFFF)</td><td>Slightly lighter (#112B4A wolves, #292929 others)</td></tr>
         <tr><td><code>--bg-nav</code></td><td>Navigation bar (use with blur)</td><td>Semi-transparent white</td><td>Dark surface or semi-transparent dark</td></tr>
+        <tr><td><code>--bg-input</code></td><td>Input field background</td><td>White (#FFFFFF) — stands out on gray surfaces</td><td>Transparent — inherits dark surface color</td></tr>
       </tbody>
     </table>
   </div>
@@ -3568,7 +3573,7 @@ function closeSelect(fieldId) {
     <span class="doc-preview-label">Reference</span>
     <div class="doc-demo-col">
       <div class="demo-row"><span class="labelBold20" style="min-width: 120px;">Links</span><span class="labelRegular20 text-secondary">Colored with <code>--interactive-transactional</code>, no underline, opacity hover</span></div>
-      <div class="demo-row"><span class="labelBold20" style="min-width: 120px;">Inputs/Textareas</span><span class="labelRegular20 text-secondary"><code>--bg-surface</code> background, <code>--border-default</code> border, 8px radius, focus uses <code>--border-active</code></span></div>
+      <div class="demo-row"><span class="labelBold20" style="min-width: 120px;">Inputs/Textareas</span><span class="labelRegular20 text-secondary"><code>--bg-input</code> background, <code>--border-default</code> border, 8px radius, focus uses <code>--border-active</code></span></div>
       <div class="demo-row"><span class="labelBold20" style="min-width: 120px;">Placeholders</span><span class="labelRegular20 text-secondary">Colored with <code>--text-placeholder</code></span></div>
       <div class="demo-row"><span class="labelBold20" style="min-width: 120px;">Images</span><span class="labelRegular20 text-secondary">max-width 100%, block display</span></div>
       <div class="demo-row"><span class="labelBold20" style="min-width: 120px;">Body</span><span class="labelRegular20 text-secondary"><code>--bg-base</code> background, <code>--text-primary</code> color, system font stack</span></div>
