--- a/examples/index.html
+++ b/examples/index.html
@@ -10,21 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" rel="stylesheet">
 
-  <!-- Design System CSS Files (load in this exact order) -->
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/design-tokens-master.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/spacing-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/container-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/border-effects-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/fonts.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/text-styles-system.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/icons.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/card-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/interactive-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/button-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/list-row-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/input-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/tag-chip-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/boilerplate.css">
+  <!-- Design System CSS — local on localhost/file://, CDN when deployed -->
+  <script src="../ds-loader.js"></script>
 
   <style>
     /* ============================================
@@ -168,7 +155,7 @@
 
     <nav class="org-nav-links">
       <a href="/index.html" class="chip surface-ghost scale-300">Getting Started</a>
-      <a href="/walkthrough.html" class="chip surface-ghost scale-300">Tokens & Styles</a>
+      <a href="/documentation.html" class="chip surface-ghost scale-300">Documentation</a>
       <a href="/examples/index.html" class="chip surface-borderNeutral scale-300 chip-team-color">Examples</a>
     </nav>
 
@@ -283,9 +270,9 @@
         </a>
 
         <!-- ---- Documentation ---- -->
-        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/documentation.html" target="_blank">
           <div class="card-thumbnail">
-            <iframe src="https://diet-air-ds.vercel.app/walkthrough.html"
+            <iframe src="https://diet-air-ds.vercel.app/documentation.html"
                     loading="lazy"
                     title="Walkthrough example preview"
                     tabindex="-1"
