--- a/inventory-list-row-demo.html
+++ b/inventory-list-row-demo.html
@@ -10,20 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" rel="stylesheet">
 
-  <!-- Diet AirDS CSS (correct load order) -->
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/design-tokens-master.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/spacing-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/container-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/border-effects-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/fonts.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/text-styles-system.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/icons.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/card-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/interactive-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/button-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/list-row-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/input-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/boilerplate.css">
+  <!-- Design System CSS — local on localhost/file://, CDN when deployed -->
+  <script src="ds-loader.js"></script>
 
   <style>
     /* ============================================
@@ -179,7 +167,7 @@
         <p class="labelRegular10 text-secondary demo-column-label">Mobile · 329px</p>
         <div class="inventory-card"><div class="inventory-list">
 
-          <div class="list-row" data-vfs="far" data-vfs-index="0">
+          <div class="list-row surface-section" data-vfs="far" data-vfs-index="0">
             <div class="leading leading-gap-lg">
               <img class="leading-image-small vfs-img" src="" alt="View from seat — far perspective" style="display:none">
               <div class="leading-image-small vfs-placeholder">VFS<br>Far</div>
@@ -198,7 +186,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="far" data-vfs-index="1">
+          <div class="list-row surface-section" data-vfs="far" data-vfs-index="1">
             <div class="leading leading-gap-lg">
               <img class="leading-image-small vfs-img" src="" alt="View from seat — far perspective" style="display:none">
               <div class="leading-image-small vfs-placeholder">VFS<br>Far</div>
@@ -217,7 +205,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="far" data-vfs-index="2">
+          <div class="list-row surface-section" data-vfs="far" data-vfs-index="2">
             <div class="leading leading-gap-lg">
               <img class="leading-image-small vfs-img" src="" alt="View from seat — far perspective" style="display:none">
               <div class="leading-image-small vfs-placeholder">VFS<br>Far</div>
@@ -244,7 +232,7 @@
         <p class="labelRegular10 text-secondary demo-column-label">Desktop · 592px</p>
         <div class="inventory-card"><div class="inventory-list">
 
-          <div class="list-row" data-vfs="far" data-vfs-index="0">
+          <div class="list-row surface-section" data-vfs="far" data-vfs-index="0">
             <div class="leading leading-gap-xl">
               <img class="leading-image-large vfs-img" src="" alt="View from seat — far perspective" style="display:none">
               <div class="leading-image-large vfs-placeholder">VFS<br>Far</div>
@@ -263,7 +251,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="far" data-vfs-index="1">
+          <div class="list-row surface-section" data-vfs="far" data-vfs-index="1">
             <div class="leading leading-gap-xl">
               <img class="leading-image-large vfs-img" src="" alt="View from seat — far perspective" style="display:none">
               <div class="leading-image-large vfs-placeholder">VFS<br>Far</div>
@@ -282,7 +270,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="far" data-vfs-index="2">
+          <div class="list-row surface-section" data-vfs="far" data-vfs-index="2">
             <div class="leading leading-gap-xl">
               <img class="leading-image-large vfs-img" src="" alt="View from seat — far perspective" style="display:none">
               <div class="leading-image-large vfs-placeholder">VFS<br>Far</div>
@@ -325,7 +313,7 @@
         <p class="labelRegular10 text-secondary demo-column-label">Mobile · 329px</p>
         <div class="inventory-card"><div class="inventory-list">
 
-          <div class="list-row" data-vfs="close" data-vfs-index="0">
+          <div class="list-row surface-section" data-vfs="close" data-vfs-index="0">
             <div class="leading leading-gap-lg">
               <img class="leading-image-small vfs-img" src="" alt="View from seat — close perspective" style="display:none">
               <div class="leading-image-small vfs-placeholder">VFS<br>Close</div>
@@ -344,7 +332,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="close" data-vfs-index="1">
+          <div class="list-row surface-section" data-vfs="close" data-vfs-index="1">
             <div class="leading leading-gap-lg">
               <img class="leading-image-small vfs-img" src="" alt="View from seat — close perspective" style="display:none">
               <div class="leading-image-small vfs-placeholder">VFS<br>Close</div>
@@ -363,7 +351,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="close" data-vfs-index="2">
+          <div class="list-row surface-section" data-vfs="close" data-vfs-index="2">
             <div class="leading leading-gap-lg">
               <img class="leading-image-small vfs-img" src="" alt="View from seat — close perspective" style="display:none">
               <div class="leading-image-small vfs-placeholder">VFS<br>Close</div>
@@ -390,7 +378,7 @@
         <p class="labelRegular10 text-secondary demo-column-label">Desktop · 592px</p>
         <div class="inventory-card"><div class="inventory-list">
 
-          <div class="list-row" data-vfs="close" data-vfs-index="0">
+          <div class="list-row surface-section" data-vfs="close" data-vfs-index="0">
             <div class="leading leading-gap-xl">
               <img class="leading-image-large vfs-img" src="" alt="View from seat — close perspective" style="display:none">
               <div class="leading-image-large vfs-placeholder">VFS<br>Close</div>
@@ -409,7 +397,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="close" data-vfs-index="1">
+          <div class="list-row surface-section" data-vfs="close" data-vfs-index="1">
             <div class="leading leading-gap-xl">
               <img class="leading-image-large vfs-img" src="" alt="View from seat — close perspective" style="display:none">
               <div class="leading-image-large vfs-placeholder">VFS<br>Close</div>
@@ -428,7 +416,7 @@
             </div>
           </div>
 
-          <div class="list-row" data-vfs="close" data-vfs-index="2">
+          <div class="list-row surface-section" data-vfs="close" data-vfs-index="2">
             <div class="leading leading-gap-xl">
               <img class="leading-image-large vfs-img" src="" alt="View from seat — close perspective" style="display:none">
               <div class="leading-image-large vfs-placeholder">VFS<br>Close</div>
