--- a/examples/chat-agent.html
+++ b/examples/chat-agent.html
@@ -5,16 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Timberwolves Ticket Assistant</title>
 
-  <!-- JUMP Design System CSS (load order matters) -->
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/design-tokens-master.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/spacing-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/container-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/border-effects-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/fonts.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/text-styles-system.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/card-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/boilerplate.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" rel="stylesheet">
+
+  <!-- Design System CSS — local on localhost/file://, CDN when deployed -->
+  <script src="../ds-loader.js"></script>
 
   <style>
     /* ============================================
