--- a/examples/checkout.html
+++ b/examples/checkout.html
@@ -9,20 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/design-tokens-master.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/spacing-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/container-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/border-effects-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/fonts.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/text-styles-system.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/icons.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/card-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/interactive-tokens.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/button-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/list-row-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/input-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/tag-chip-components.css">
-  <link rel="stylesheet" href="https://diet-air-ds.vercel.app/boilerplate.css">
+  <!-- Design System CSS — local on localhost/file://, CDN when deployed -->
+  <script src="../ds-loader.js"></script>
 
   <style>
     /* ─── Page Shell ─── */
